update the layout page

--- a/coServ/zh/index.html
+++ b/coServ/zh/index.html
@@ -40,7 +40,7 @@
 <p>假設您已安裝了 node.js，接下來就是安裝 coServ:</p>
 <pre><code> &gt; npm install coserv</code></pre>
 
-<p>完成安裝後您會看到 coServ 的目錄。請進入到 coServ 目錄後執行以下的命令：</p>
+<p>完成安裝後您會看到 coServ 的目錄。請進入到 node_modules/coServ 目錄後執行以下的命令：</p>
 <pre><code> &gt;  node cli/addSite.js hello</code></pre>
 
 <p>這將會幫您建立一個稱為 'hello' 的網站，並且把它設為 coServ 的預設網站。這時您只需啟動 coServ，然後到網路瀏覽器上輸入
