--- a/coServ/zh/layout.html
+++ b/coServ/zh/layout.html
@@ -77,9 +77,68 @@
 <h3>來一段程式碼吧</h3>
 
 <p>讓我們用 coServ 下載套件中所附的範例來說明。先找到位於 'www/themes/index/layout/default/page.html' 的預設頁型檔。
-這個頁型檔建構了示範網站中所有網頁的基本框架。</p>
+這個頁型檔建構了示範網站中所有網頁的基本框架。我們將預設頁型中有關 body 的部份印出來以方便討論：</p>
 
-<p>以上完成了 coServ 檔案結構的介紹。大家可以發現雖然功能很強大，但經過適當的分類整理，並不會覺得複雜。接下來我們就要談最有趣的部份：coServ 的設計美學。</p>
+<pre><code>&lt;body&gt;
+    &lt;div id="pgContainer"&gt;
+        &lt;div id="pgHead"&gt;<% region('./head'); %>&lt;/div&gt;
+        &lt;div id="pgLeft"&gt;<% region('./left'); %>&lt;/div&gt;
+        &lt;div id="pgContent"&gt;<% block(); %>&lt;/div&gt;
+        &lt;div id="pgFooter"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+&lt;/body></code></pre>
+
+<p>從上面的 HTML 碼可以看出預設頁型是將網頁切割成四個區域：頁首區（#pgHead）、左邊欄（#pgLeft）、主文區（#pgContent）和頁尾區（#pgFooter）。
+而頁首區是這麼實作的：</p>
+
+<pre><code><% region('./head'); %></code></pre>
+<p>這表示我們不想每個頁面都要重做一次頁首的程式碼（HTML 和 CSS），所以我們是引用 './head' 這個區域。而這個頁首區域的定義是在 './head'
+這個目錄中（www/themes/index/layout/default/head）。</p>
+
+<p>同樣的，區塊也可以用類似的方法引用進來：</p>
+<pre><code><% block(); %></code></pre>
+
+<p>上面引用區塊的例子中，我們並未給輸入參數。一般來說，引用區塊是需要輸入參數的，以便 coServ 知道要引用哪一個區塊。
+如果沒給參數，則表示要引用使用者輸入的網址所指向的區塊。</p>
+
+<p>&nbsp;</p>
+
+<h3>定義區域和區塊</h3>
+<p>看到這裡可能大家已經慢慢了解在 coServ 上建置網站的工作已被簡化到區域和區塊的建置（定義）。
+區域其實就是一個 HTML 的片段，所以你可以用一個 HTML 檔再加上一個 CSS檔 (CSS 不一定需要)來實作出一個區域。
+不過這裡要指出的是，這二個檔（HTML, CSS）並不是單純的檔案，而是使用 EJS 語法的樣板。
+如此一來，開發者在實作時有更大的空間和彈性。</p>
+
+<p>以 MVC 的架構來看，區域只有 view 的部份，然而區域卻有 model, view, control 三個完整的結構。也因此在實作區塊時，
+會需要更多的設計檔：HTML, CSS, Javascript, 引用檔、以及多語設定套件。有時候你會用到五個檔欄實作一個區塊，不過多數的時候只需其中的二到三個檔案就足夠了。</p>
+
+<p>更進一步解釋這五個檔案：HTML 和 CSS 樣板是用來實作區塊中 view 的部份，而 Javascript 的樣板則是實作了 control 的功能。
+至於引用檔是用來引用額外的 CSS 檔案或是 Javascript 程式庫。這些額外引用的 CSS 或 js 檔會被整合到網頁的 &lt;head&gt; 中。
+以下是引用檔的一個範例：</p>
+<pre><code>http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css
+/shared/js/lib/jquery-1.10.2.min.js
+http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js
+/shared/js/wFront.js</code></pre>
+
+<p>至於區塊的 Javascript 檔，其實會被 coServ 在外圍做一層包裝，而變成一個物件。此外，這個物件會給予 'ctrl' 的名稱。
+在實作區塊的 controller 時，你幾乎可以把它當作 node.js 的模組一般來寫。以下是一個區塊 controller 的範例：</p>
+
+<pre><code>ctrl.startup = function()  {
+    // this function will be called when the block is loaded and rendered
+    // you can take the chance to initialize the block.
+};
+
+ctrl.foo = function()  {
+    // this is a customized function. You can make as many customized functions as you need.
+};
+
+// unlike node.js, exports is not needed here.</code></pre>
+
+<p>你可以從 HTML 中用以下的方式來呼叫區塊 controller 中的函式：</p>
+<pre><code>&lt;a href="..." onclick="<%=ctrl%>.foo();"&gt;Hello There&lt;a&gt;</code></pre>
+
+<p>看到這裡你已經對 coServ 的網頁組合語開發模式有相當的認識了。建議大家可以參考下載檔案所附的 'index' 和 'demoApp'
+二個示範網站，去找到更多的範例。</p>
 
 </section>
     </div>
