add reference links

--- a/coServ/zh/layout.html
+++ b/coServ/zh/layout.html
@@ -139,6 +139,13 @@ ctrl.foo = function()  {
 
 <p>看到這裡你已經對 coServ 的網頁組合語開發模式有相當的認識了。建議大家可以參考下載檔案所附的 'index' 和 'demoApp'
 二個示範網站，去找到更多的範例。</p>
+<p>&nbsp;</p>
+
+<h3>更多文件</h3>
+<ul>
+    <li><a href="./index.html">開箱文</a></li>
+    <li><a href="./structure.html">網站的檔案結構</a></li>
+</ul>
 
 </section>
     </div>
