--- a/coServ/zh/structure.html
+++ b/coServ/zh/structure.html
@@ -96,6 +96,13 @@ cont 目錄主要是用來存放一些靜態的檔案或資料，例如圖檔、
 個別網站使用的檔案，則存放在個別的網站目錄中。</p>
 
 <p>以上完成了 coServ 檔案結構的介紹。大家可以發現雖然功能很強大，但經過適當的分類整理，並不會覺得複雜。接下來我們就要談最有趣的部份：coServ 的設計美學。</p>
+<p>&nbsp;</p>
+
+<h3>更多文件</h3>
+<ul>
+    <li><a href="./index.html">開箱文</a></li>
+    <li><a href="./layout.html">coServ 的設計美學</a></li>
+</ul>
 
 </section>
     </div>
