--- a/coServ/zh/index.html
+++ b/coServ/zh/index.html
@@ -82,6 +82,14 @@
 <p>以上的範例示範了如何產生一些動態的內容。雖然是簡單的示範，但已說明如何利用 template 來協助產生網頁。不過這只展示了 coServ 大概 1% 的功能。
     更強大的功能，我們將陸續介紹，就請大家耐心的往下看吧！</p>
 
+<p>&nbsp;</p>
+
+<h3>更多文件</h3>
+<ul>
+    <li><a href="./structure.html">網站的檔案結構</a></li>
+    <li><a href="./layout.html">coServ 的設計美學</a></li>
+</ul>
+
 </section>
     </div>
 
