new article: relatable www

--- a/coServ/zh/index.html
+++ b/coServ/zh/index.html
@@ -88,6 +88,7 @@
 <ul>
     <li><a href="./structure.html">網站的檔案結構</a></li>
     <li><a href="./layout.html">coServ 的設計美學</a></li>
+    <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
 </ul>
 
 </section>
