--- a/coServ/zh/structure.html
+++ b/coServ/zh/structure.html
@@ -102,6 +102,7 @@ cont 目錄主要是用來存放一些靜態的檔案或資料，例如圖檔、
 <ul>
     <li><a href="./index.html">開箱文</a></li>
     <li><a href="./layout.html">coServ 的設計美學</a></li>
+    <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
 </ul>
 
 </section>
