--- a/coServ/zh/layout.html
+++ b/coServ/zh/layout.html
@@ -146,6 +146,7 @@ ctrl.foo = function()  {
     <li><a href="./index.html">開箱文</a></li>
     <li><a href="./structure.html">網站的檔案結構</a></li>
     <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
+    <li><a href="./jass.html">JASS</a></li>
 </ul>
 
 </section>
