--- a/coServ/zh/jass.html
+++ b/coServ/zh/jass.html
@@ -188,6 +188,7 @@ body {
     <li><a href="./index.html">開箱文</a></li>
     <li><a href="./structure.html">網站的檔案結構</a></li>
     <li><a href="./layout.html">coServ 的設計美學</a></li>
+    <li><a href="./blocks.html">神奇的區塊</a></li>
     <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
 </ul>
 
