--- a/coServ/zh/layout.html
+++ b/coServ/zh/layout.html
@@ -145,8 +145,9 @@ ctrl.foo = function()  {
 <ul>
     <li><a href="./index.html">開箱文</a></li>
     <li><a href="./structure.html">網站的檔案結構</a></li>
-    <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
+    <li><a href="./blocks.html">神奇的區塊</a></li>
     <li><a href="./jass.html">JASS</a></li>
+    <li><a href="./relocate_www.html">可重定位的 WWW 目錄</a></li>
 </ul>
 
 </section>
